@@ -1,8 +1,9 @@
 package com.smartcampus.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.smartcampus.entity.AiConversation;
+import com.smartcampus.repository.AiConversationRepository;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 import reactor.core.publisher.Flux;
@@ -10,21 +11,116 @@ import reactor.core.publisher.Mono;
 import reactor.util.retry.Retry;
 
 import java.time.Duration;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 
 @Service
 @Slf4j
 public class QianWenService {
 
-    @Autowired
-    private WebClient qianwenWebClient;
+    private final WebClient webClient;
+    private final AiConversationRepository aiConversationRepository;
+    private final ObjectMapper objectMapper;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    // 存储会话历史（可选）
+    private final Map<String, List<Map<String, String>>> sessionHistories = new ConcurrentHashMap<>();
+
+    public QianWenService(AiConversationRepository aiConversationRepository) {
+        this.aiConversationRepository = aiConversationRepository;
+        this.objectMapper = new ObjectMapper();
+
+        String apiKey = System.getenv("AI_QIANWEN_API_KEY");
+        if (apiKey == null || apiKey.isEmpty()) {
+            log.error("AI_QIANWEN_API_KEY 环境变量未设置");
+            throw new RuntimeException("AI_QIANWEN_API_KEY 环境变量未设置");
+        }
+
+        this.webClient = WebClient.builder()
+                .baseUrl("https://dashscope.aliyuncs.com/compatible-mode/v1")
+                .defaultHeader("Authorization", "Bearer " + apiKey)
+                .build();
+    }
 
     /**
-     * 非流式调用 - 保留用于文件上传等场景
+     * 从数据库获取并构建历史消息
+     */
+    public List<Map<String, String>> buildHistoryFromDb(Long userId, String sessionId, int limit) {
+        List<AiConversation> recentHistory = aiConversationRepository
+                .findTopNByUserIdAndSessionIdOrderByCreatedAtAsc(userId, sessionId, limit);
+
+        List<Map<String, String>> historyMessages = new ArrayList<>();
+        for (AiConversation conv : recentHistory) {
+            historyMessages.add(Map.of("role", "user", "content", conv.getQuestion()));
+            historyMessages.add(Map.of("role", "assistant", "content", conv.getAnswer()));
+        }
+        return historyMessages;
+    }
+
+    /**
+     * 带上下文的流式调用
+     */
+    public Flux<String> askQuestionWithContext(Long userId, String sessionId,
+                                               String question,
+                                               List<Map<String, String>> extraHistory,
+                                               String model) {
+        // 1. 从数据库获取历史
+        List<Map<String, String>> dbHistory = buildHistoryFromDb(userId, sessionId, 10);
+
+        // 2. 合并额外历史
+        List<Map<String, String>> allHistory = new ArrayList<>(dbHistory);
+        if (extraHistory != null) {
+            allHistory.addAll(extraHistory);
+        }
+
+        // 3. 构建 messages
+        List<Map<String, String>> messages = new ArrayList<>();
+        messages.add(Map.of("role", "system", "content", buildSystemPrompt()));
+        messages.addAll(allHistory);
+        messages.add(Map.of("role", "user", "content", question));
+
+        log.info("🤖 调用通义千问，消息数量: {}", messages.size());
+
+        // 4. 调用API
+        return callAiApi(messages, model);
+    }
+
+    /**
+     * 调用通义千问API（流式）
+     */
+    private Flux<String> callAiApi(List<Map<String, String>> messages, String model) {
+        Map<String, Object> requestBody = Map.of(
+                "model", model != null ? model : "qwen-max",
+                "messages", messages,
+                "temperature", 0.3,
+                "top_p", 0.8,
+                "max_tokens", 2000,
+                "stream", true,
+                "incremental_output", true
+        );
+
+        return webClient.post()
+                .uri("/chat/completions")
+                .bodyValue(requestBody)
+                .retrieve()
+                .bodyToFlux(String.class)
+                .timeout(Duration.ofSeconds(90))
+                .doOnError(e -> log.error("调用通义千问失败", e))
+                .retryWhen(Retry.backoff(3, Duration.ofSeconds(1))
+                        .maxBackoff(Duration.ofSeconds(5))
+                        .filter(throwable -> throwable.getMessage() != null &&
+                                (throwable.getMessage().contains("reset") ||
+                                        throwable.getMessage().contains("timeout")))
+                        .doBeforeRetry(retrySignal ->
+                                log.info("第 {} 次重试, 原因: {}",
+                                        retrySignal.totalRetries() + 1,
+                                        retrySignal.failure().getMessage()))
+                );
+    }
+
+    /**
+     * 非流式调用 - 保留用于兼容性和测试
      */
     public Mono<String> askQuestion(String question, List<String> contexts, String model) {
         List<Map<String, String>> messages = List.of(
@@ -41,71 +137,14 @@ public class QianWenService {
                 "stream", false
         );
 
-        return qianwenWebClient.post()
+        return webClient.post()
+                .uri("/chat/completions")
                 .bodyValue(requestBody)
                 .retrieve()
                 .bodyToMono(String.class)
                 .map(this::parseNonStreamResponse)
                 .timeout(Duration.ofSeconds(90))
                 .doOnError(e -> log.error("调用通义千问API失败: {}", e.getMessage()));
-
-    }
-
-    /**
-     * 流式调用 - 直接返回通义千问原生流式响应（带重试）
-     * 返回格式：data: {"output":{"text":"xxx","finish_reason":null}}
-     */
-    public Flux<String> askQuestionStream(String question, List<String> contexts, String model) {
-        log.info("🔥 askQuestionStream 开始调用，question长度: {}", question.length());
-
-        List<Map<String, String>> messages = List.of(
-                Map.of("role", "system", "content", buildSystemPrompt()),
-                Map.of("role", "user", "content", buildUserPrompt(question, contexts))
-        );
-
-        Map<String, Object> requestBody = Map.of(
-                "model", model != null ? model : "qwen-max",
-                "messages", messages,
-                "temperature", 0.3,
-                "top_p", 0.8,
-                "max_tokens", 2000,
-                "stream", true,
-                "incremental_output", true  // 只返回增量内容
-        );
-
-        log.info("请求体构建完成，model: {}", model);
-
-        return qianwenWebClient.post()
-                .bodyValue(requestBody)
-                .retrieve()
-                .bodyToFlux(String.class)
-                .doOnNext(chunk -> log.info("收到原始流式数据: {}", chunk))
-                .doOnComplete(() -> log.info("通义千问流式调用完成"))
-                .doOnError(error -> log.error("通义千问流式调用失败", error))
-                .timeout(Duration.ofSeconds(90))
-                // 添加重试逻辑
-                .retryWhen(Retry.backoff(3, Duration.ofSeconds(1))
-                        .maxBackoff(Duration.ofSeconds(5))
-                        .filter(throwable -> {
-                            boolean shouldRetry = throwable.getMessage() != null &&
-                                    (throwable.getMessage().contains("Connection reset") ||
-                                            throwable.getMessage().contains("connection reset") ||
-                                            throwable.getMessage().contains("reset by peer"));
-                            if (shouldRetry) {
-                                log.warn("检测到连接重置，准备重试: {}", throwable.getMessage());
-                            }
-                            return shouldRetry;
-                        })
-                        .doBeforeRetry(retrySignal ->
-                                log.info("第 {} 次重试, 原因: {}",
-                                        retrySignal.totalRetries() + 1,
-                                        retrySignal.failure().getMessage())
-                        )
-                        .onRetryExhaustedThrow((retryBackoffSpec, retrySignal) -> {
-                            log.error("重试次数耗尽，最终失败", retrySignal.failure());
-                            return retrySignal.failure();
-                        })
-                );
     }
 
     /**
@@ -116,7 +155,7 @@ public class QianWenService {
             Map responseMap = objectMapper.readValue(response, Map.class);
             List<Map<String, Object>> choices = (List<Map<String, Object>>) responseMap.get("choices");
             if (choices != null && !choices.isEmpty()) {
-                Map<String, Object> choice = choices.getFirst();
+                Map<String, Object> choice = choices.get(0);
                 Map<String, String> message = (Map<String, String>) choice.get("message");
                 return message.get("content");
             }
@@ -127,6 +166,9 @@ public class QianWenService {
         }
     }
 
+    /**
+     * 构建系统提示词
+     */
     private String buildSystemPrompt() {
         return """
                 你是智慧校园的个性化学习伴侣，负责解答学生关于学习、课程、校园生活等方面的问题。
@@ -137,6 +179,9 @@ public class QianWenService {
                 4. 回答格式清晰，适当使用分段和重点标注""";
     }
 
+    /**
+     * 构建用户提示词（带上下文）
+     */
     private String buildUserPrompt(String question, List<String> contexts) {
         if (contexts == null || contexts.isEmpty()) {
             return question;
@@ -151,5 +196,9 @@ public class QianWenService {
         prompt.append("问题：").append(question).append("\n\n");
         prompt.append("请根据以上资料给出详细解答。");
         return prompt.toString();
+    }
+
+    public ObjectMapper getObjectMapper() {
+        return objectMapper;
     }
 }
